Fixed checkbox not being displayed correctly on mobile.

--- a/frontend/src/app/article-card/article-card.component.scss
+++ b/frontend/src/app/article-card/article-card.component.scss
@@ -60,7 +60,7 @@
   }
 
   .article-header {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     color: var(--color-text);
     position: relative;
     min-width: 0;
@@ -68,7 +68,7 @@
     .header-wrapper {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 16px;
     }
 
     .header-content {
@@ -76,6 +76,7 @@
       align-items: center;
       gap: 12px;
       width: 100%;
+      min-width: 0;
 
       h2 {
         margin: 0;
@@ -86,18 +87,21 @@
         text-overflow: ellipsis;
         flex: 1;
         line-height: 1;
+        min-width: 0;
       }
     }
 
     .check-circle {
       padding: 0;
       width: 32px;
+      min-width: 32px;
       height: 32px;
       color: var(--color-sub-1);
       transition: transform 0.3s ease-in-out;
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: 0;
 
       &:hover {
         transform: scale(1.2);
@@ -121,6 +125,16 @@
     .card-button {
       align-self: flex-start;
       margin-bottom: 0;
+    }
+
+    @media (max-width: 600px) {
+      .header-content {
+        gap: 8px;
+      }
+
+      .check-circle {
+        margin-right: 0;
+      }
     }
   }
 
